# python-depot

./: .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: analytics-dashboard.md  catalog-api.md  dependency-health.md  health-monitoring.md  ratings-api.md  report-generator.md
examples/: README.md  basic_operations.py  catalog_api.py  dependency_scanning.py  health_checks.py  reviews_and_ratings.py  search_and_trends.py
python_depot/: __init__.py  api.py  database.py
python_depot/dependency_health/: __init__.py  alerts.py  models.py  osv_client.py  scanner.py  scoring.py
python_depot/pydepot/: __init__.py  analytics.py  models.py  reports.py
python_depot/python_depot/: api.py  database.py
python_depot/ratings/: __init__.py
python_depot/routers/: dependency_health.py  ratings.py  reports.py
src/: app.py  main.py
src/models/: __init__.py  analytics.py  package.py  rating.py  report.py  review.py  vulnerability.py
src/routers/: analytics.py  packages.py  ratings.py  reports.py  reviews.py
src/services/: analytics_service.py  catalog_service.py  health_service.py  rating_service.py  report_service.py
src/src/: __init__.py  database.py
tests/: conftest.py  test_alert_integration.py  test_alert_model.py  test_alerts.py  test_analytics.py  test_dependency_health.py  test_health.py  test_main.py  test_osv_client.py  test_packages.py  test_pre_dev_contract.py  test_ratings.py  test_reports.py  test_reviews.py  test_scanner.py  test_scoring.py  test_vulnerabilities.py
(+15 files in other folders)
